fix: chatbot text alignment

--- a/assets/styles/components/compactHeader.scss
+++ b/assets/styles/components/compactHeader.scss
@@ -75,6 +75,7 @@ body.compact-header--active {
 		border-radius: $border-radius-10;
 		background: $primary-gradient;
 		box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+		text-align: left;
 
 		> div {
 			position: relative;
